- Added <fenv.h> for C99, and the (yet unimplemented) functions
  feclearexcept(), fegetenv(), fegetexceptflag(), fegetround(),
  feholdexcept(), feraiseexcept(), fesetenv(), fesetexceptflag(),
  fetestexcept(), fetestround() and feupdateenv().

- Replaced the old pow() implementation. However, powf() may need to
  be changed to set a domain error.


c.lib 1.197 (4.11.2005)

- Updated math_hypot.c to a newer (e_hypot.c 1.3 95/01/18) version from
  fdlibm which uses macros for manipulating the high and low words of a
  double, like the rest of fdlibm functions in clib2. The previous version
  would give bogus results when compiled with -O3 in clib2 which lead to
  "interesting" results (and lots of fun while searching for the problem)
  in Ghostscript. Wish I managed to track this down yesterday for 1.196
  release... <aantonijevic>

- Implemented atanh() and atanhf() which were not listed in the TODO
  file but were still unimplemented up until now.

- Replaced ldexp() and modf().

- Added __set_h_errno() and __get_h_errno() functions.

- The thread-safe library now tries to enable bsdsocket.library base
  sharing and attempts to make the TCP/IP stack call the local
  __set_errno() and __set_h_errno(), so that any Process calling
  the library functions will get a chance to see proper error
  codes. Whether any of these features could be enabled can be tested
  through two global variables __can_share_socket_library_base and
  __thread_safe_errno_h_errno which are defined in <dos.h>. Note that
  for both features to work you will need the Roadshow bsdsocket.library
  version 4.275 or higher.

- In <stdbool.h> the preprocessor definition should read
  "__bool_true_false_are_defined" rather than "__bool_true_and_false_are_defined".
  Thanks go to Peter Bengtsson for finding and fixing it.

- The network startup code no longer checks for the presence of a possible
  daemon startup message by default. You now have to enable this feature