@@ -526,6 +526,8 @@ UNIX_LIB = \
 	stdlib_mkdtemp.o \
 	stdlib_mkstemp.o \
 	stdlib_mktemp.o \
+	stdlib_malloc.o \
+	stdlib_realloc.o \
 	stdlib_system.o \
 	termios_cfgetispeed.o \
 	termios_cfgetospeed.o \
